2010-07-22  Jakub Jelinek  <jakub@redhat.com>

	PR debug/45015
	* var-tracking.c (adjust_mems): Ignore ASM_OPERANDS with non-zero
	ASM_OPERANDS_OUTPUT_IDX.
	(adjust_insn): For inline asm with multiple sets ensure first
	ASM_OPERANDS vectors are used by all following ASM_OPERANDS in
	the insn.

2010-07-21  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/44900
	* tree-sra.c (load_assign_lhs_subreplacements): Updated comments.
	(sra_modify_assign): Move gsi to the next statmenent unconditionally.

2010-07-21  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2010-07-19  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/sourcebuild.texi (Effective-Target Keywords): Document
	sse_runtime, sse2_runtime.

2010-07-20  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44977
	* tree-ssa-dom.c (propagate_rhs_into_lhs): Do not create invalid
	SSA form.

2010-07-19  Bingfeng Mei  <bmei@broadcom.com>

	* ddg.c (create_ddg): Exclude nodes of debug_insn in counting nodes
        of a loop.
        * loop-doloop.c (doloop_condition_get): Skip possible debug_insn.

2010-07-15  Jie Zhang  <jie@codesourcery.com>

	* config/arm/cortex-a8.md (cortex_a8_load_store_2): Reserve
	cortex_a8_issue_ls.

2010-07-14  Jie Zhang  <jie@codesourcery.com>

	* config/arm/cortex-a8.md (cortex_a8_alu): Don't use
	cortex_a8_default when neon_type is not none.

2010-07-14  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2010-07-12  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/i386/i386.c (ix86_sol10_return_in_memory): Rename to
	ix86_solaris_return_in_memory.
	* config/i386-protos.h: Reflect this.
	* config/i386/vx-common.h (SUBTARGET_RETURN_IN_MEMORY): Likewise.
	* config/i386/sol2-10.h (SUBTARGET_RETURN_IN_MEMORY): Likewise.
	Move ...
	* config/i386/sol2.h (SUBTARGET_RETURN_IN_MEMORY): ... here.

2010-07-14  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2010-07-12  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
