@@ -3,6 +3,13 @@
 	PR debug/45015
 	* gcc.target/m68k/pr45015.c: New test.
 
+	Backport from mainline
+	2010-07-16  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/44942
+	* gcc.c-torture/execute/pr44942.c: New test.
+	* gcc.target/i386/pr44942.c: New test.
+
 2010-07-21  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/44929
